# paas-national-prescription-extractor

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  code-quality.yml  release.yml
day_supply_national/: __init__.py  cli.py  demo.py  extractor.py  test_suite.py
day_supply_national/data/: insulin_products.csv
docs/: 100_percent_success_report.md  API.md  perfect_system_report.md  test_report.md  warning_optimization_report.md
paas_extractor/: cli.py  extractor.py  test_suite.py
paas_extractor/data/: nasal_inhalers.csv  oral_inhaler_products.csv
